Fix retest incorrect logic and improve 100% score message

--- a/src/questionBank/Education/Numerical/numerical-easy-QB.json
+++ b/src/questionBank/Education/Numerical/numerical-easy-QB.json
@@ -44,7 +44,7 @@
         "C": "30",
         "D": "32"
       },
-      "answer": "D",
+      "answer": "C",
       "explanation": "75% of 40 = 0.75 × 40 = 30"
     },
     {
