Update question bank and App.js logic

--- a/src/questionBank/Education/General/general-easy-QB.json
+++ b/src/questionBank/Education/General/general-easy-QB.json
@@ -32,7 +32,7 @@
         "C": "6 hours",
         "D": "7 hours"
       },
-      "answer": "D",
+      "answer": "C",
       "explanation": "From 8:00 AM to 2:00 PM is a total of 6 hours."
     },
     {
