--- a/src/questionBank/Education/Logical/logical-easy-QB.json
+++ b/src/questionBank/Education/Logical/logical-easy-QB.json
@@ -212,7 +212,7 @@
         "C": "20",
         "D": "30"
       },
-      "answer": "A",
+      "answer": "B",
       "explanation": "30 ÷ 3 = 10 minutes."
     },
     {
