--- a/src/questionBank/Education/Numerical/numerical-easy-QB.json
+++ b/src/questionBank/Education/Numerical/numerical-easy-QB.json
@@ -92,7 +92,7 @@
         "C": "RM1,325",
         "D": "RM1,375"
       },
-      "answer": "A",
+      "answer": "D",
       "explanation": "RM750 + RM625 = RM1,375"
     },
     {
