--- a/src/questionBank/Education/Verbal/verbal-easy-QB.json
+++ b/src/questionBank/Education/Verbal/verbal-easy-QB.json
@@ -147,7 +147,7 @@
       "id": "Education_Verbal_Easy_Q013",
       "question": "Choose the correct spelling:",
       "options": {
-        "A": "Definately",
+        "A": "Dafinetely",
         "B": "Definitely",
         "C": "Defanitely",
         "D": "Definately"
