--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.52.0",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.5.0",
     "date-fns-tz": "^3.2.0",
-    "react": "^18.2.0",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "^5.0.1",
     "recharts": "^3.1.0",
@@ -43,6 +40,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.17"
