--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/dom": "^10.4.0",
     "chart.js": "^4.5.0",
     "date-fns-tz": "^3.2.0",
+    "next": "^15.4.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
