Fix routing for SPA

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "CI=false npm run build"
-      }
-    }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
-}
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/.*", "dest": "/index.html" }
+    ],
+    "buildCommand": "CI=false npm run build",
+    "outputDirectory": "build"
+  }
