--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "^5.0.1",
     "recharts": "^3.1.0",
